# Indexation

./: .gitignore  CMakeLists.txt  Indexacion.ncb  Indexacion.sln  README.md
Debug/: Indexacion.ilk
Indexacion/: AnalizadorLexico.cpp  AnalizadorLexico.h  AnalizadorSintactico.h  ArbolB+.cpp  ArbolB+.h  CMakeLists.txt  Fichero.cpp  Fichero.h  Indexacion.vcproj  ListaDoble.cpp  ListaDoble.h  Tabla.cpp  Tabla.h  arbolB.cpp  arbolB.h  main.cpp  texto.txt
Indexacion/BaseDatos/: arbol.txt  nombre.txt  pagos.txt  salarios-apellido.txt  salarios-direccion.txt  salarios-nombre.txt  salarios-sexo.txt  salarios.txt
Indexacion/Debug/: BuildLog.htm  mt.dep  vc90.idb
